[package]
name = "modelbuilder"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/rustml/modelbuilder"
description = "Artificial intelligence and neural network model building architecture."
repository = "https://github.com/rustml/modelbuilder"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", package = "candle-core", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
mki = "0.2.3"
tokio = { version = "1.34.0", features = ["full"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
